# airpg

./: README.md  compose.yml
client/: .eslintrc.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/app/: layout.tsx  page.tsx
client/src/app/character-sheet/: page.tsx
client/src/app/create-campaign/: page.tsx
client/src/app/join-campaign/: page.tsx
client/src/app/login/: page.tsx
client/src/app/login-complete/: page.tsx
client/src/app/menu/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/: index.tsx
client/src/components/campaign/: CampaignPlayersCard.tsx  ChatBot.tsx  PdfReader.tsx  RollDice.tsx  chatbot.tsx
client/src/components/header/: index.tsx
client/src/components/mainCard/: index.tsx
client/src/components/modal/: ModalJoinCampaign.tsx  ModalLogin.tsx
client/src/components/modalJoinCampaign/: index.tsx
client/src/components/modalLogin/: index.tsx
client/src/components/rich-text-editor/: RichTextEditor.tsx  Toolbar.tsx
client/src/components/ui/: button.tsx  campaign-panel.tsx  card.tsx  chatbot.tsx  pdf-reader.tsx  (+1 more)
client/src/services/: api.ts  valideEmail.ts  validePassword.ts  verifyExistingEmail.ts  ws.ts
client/src/styles/: RichTextEditor.css  globals.css
server/: .gitignore  Dockerfile  ai_assistant_wiki_guide.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py  test.db
server/crud/: campaign.py  chat.py  user.py
server/routes/: campaigns.py  chats.py  users.py
server/services/: chat_image.py  chat_message.py  chat_message_player.py
(+6 files in other folders)
